fix problems on mobile devices;

--- a/assets/css/mobile.less
+++ b/assets/css/mobile.less
@@ -190,4 +190,13 @@
   .pdetails .pdpages .pdpage {
     padding: 30px 0;
   }
+  .cartaccontainer {
+    width: auto;
+  }
+  .tt-dropdown-menu {
+    width: 310px;
+  }
+  .empty_cart {
+    width: auto;
+  }
 }
